# training-python-miniserve

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/miniserve/: __init__.py  cli.py  server.py
tests/: test_miniserve.py
