[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniserve"
version = "0.1.0"
description = "A minimal embeddable HTTP file server for development use"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["http", "server", "dev", "static", "files"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = []

[project.scripts]
miniserve = "miniserve.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/miniserve"
Repository = "https://github.com/yourname/miniserve"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/miniserve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=miniserve --cov-report=term-missing"
