[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniserve"
version = "0.1.0"
description = "A minimal embeddable HTTP file server for development use"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["http", "server", "dev", "static", "files"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = []

[project.scripts]
miniserve = "miniserve.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/miniserve"
Repository = "https://github.com/yourname/miniserve"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/miniserve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=miniserve --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common bugs and design issues)
    "SIM", # flake8-simplify (simplifiable code)
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

